# booked

./: .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
app/: main.py
app/models/: book.py  collection.py  user.py
app/repositories/: collection_repo.py  users_repo.py
app/routers/: books.py  collections.py  users.py
app/services/: books.py  collections.py  user.py  users.py
app/utils/: utils.py
backend/: .gitignore  Dockerfile  LICENSE.txt  pyproject.toml
backend/app/: client.py  config.py  dependencies.py  main.py
backend/app/models/: book.py  collection.py  user.py
backend/app/repositories/: book_repo.py  collection_repo.py  user_repo.py
backend/app/routers/: book_routes.py  books.py  collection_routes.py  collections.py  user_routes.py  users.py
backend/app/services/: book_service.py  collections.py  user_service.py  users.py
backend/app/utils/: utils.py
backend/db_scripts/: init.sql
backend/http/: books.http  users.http
backend/tests/: test_collections.py  test_users.py
db_scripts/: init.sql
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx  routeTree.gen.ts
frontend/src/api/: CollectionService.tsx  UserService.tsx
frontend/src/common/: types.ts
frontend/src/components/: AddCollectionCard.tsx  CollectionCard.tsx  CustomIcons.tsx  NavBar.tsx
frontend/src/pages/: Account.tsx  SignUp.tsx
frontend/src/routes/: __root.tsx  account.tsx  signup.tsx
http/: books.http  collections.http
tests/: test_collections.py  test_users.py
