[project]
name = "booked"
version = "0.1.0"
description = ""
authors = [
    {name = "BenKelenski",email = "ben.kelenski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "bcrypt (>=4.2.1,<5.0.0)"
]
package-mode = false

[dependency-groups]
ruff = "^0.9.2"
pytest = "^8.3.4"

[tool.poe.tasks]
run = "poetry run fastapi dev app/main.py"
lint = "poetry run ruff check"
lint-fix = "poetry run ruff check --fix"
format = "poetry run ruff format"

