[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.10",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "sqlmodel>=0.0.23",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.9",
]
